fix schemas for swagger
