# docs/swagger.json
@@ -10,7 +10,7 @@
     "basePath": "/",
     "paths": {
         "/api/v1/create-portfolio": {
-            "get": {
+            "post": {
                 "security": [
                     {
                         "TGWebAppToken": []
@@ -35,7 +35,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.CreatePortfolioSchema"
+                            "$ref": "#/definitions/model.CreatePortfolioRequest"
                         }
                     }
                 ],
@@ -43,13 +43,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.Body"
+                            "$ref": "#/definitions/schema.CreatePortfolio"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/utils.Body"
+                            "$ref": "#/definitions/schema.NoData"
                         }
                     }
                 }
@@ -81,7 +81,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.DeletePortfolioSchema"
+                            "$ref": "#/definitions/model.DeletePortfolioRequest"
                         }
                     }
                 ],
@@ -89,13 +89,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.Body"
+                            "$ref": "#/definitions/schema.NoData"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/utils.Body"
+                            "$ref": "#/definitions/schema.NoData"
                         }
                     }
                 }
@@ -132,16 +132,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/model.PortfolioResponse"
-                            }
+                            "$ref": "#/definitions/schema.GetPortfolios"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/utils.Body"
+                            "$ref": "#/definitions/schema.NoData"
                         }
                     }
                 }
@@ -214,7 +211,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.UpdatePortfolioSchema"
+                            "$ref": "#/definitions/model.UpdatePortfolioRequest"
                         }
                     }
                 ],
@@ -222,13 +219,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.Body"
+                            "$ref": "#/definitions/schema.NoData"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/utils.Body"
+                            "$ref": "#/definitions/schema.NoData"
                         }
                     }
                 }
@@ -236,7 +233,7 @@
         }
     },
     "definitions": {
-        "model.CreatePortfolioSchema": {
+        "model.CreatePortfolioRequest": {
             "type": "object",
             "properties": {
                 "name": {
@@ -249,7 +246,7 @@
                 }
             }
         },
-        "model.DeletePortfolioSchema": {
+        "model.DeletePortfolioRequest": {
             "type": "object",
             "properties": {
                 "id": {
@@ -262,27 +259,7 @@
                 }
             }
         },
-        "model.PortfolioResponse": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "profit": {
-                    "type": "integer"
-                },
-                "updated_at": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.UpdatePortfolioSchema": {
+        "model.UpdatePortfolioRequest": {
             "type": "object",
             "properties": {
                 "id": {
@@ -324,12 +301,100 @@
                 }
             }
         },
+        "schema.CreatePortfolio": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "request": {
+                    "type": "string",
+                    "example": "/api/v1/endpoint"
+                },
+                "time": {
+                    "type": "string",
+                    "example": "2023-08-01T00:00:00Z"
+                },
+                "title": {
+                    "type": "string",
+                    "example": "success"
+                }
+            }
+        },
+        "schema.GetPortfolios": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schema.Portfolio"
+                    }
+                },
+                "request": {
+                    "type": "string",
+                    "example": "/api/v1/endpoint"
+                },
+                "time": {
+                    "type": "string",
+                    "example": "2023-08-01T00:00:00Z"
+                },
+                "title": {
+                    "type": "string",
+                    "example": "success"
+                }
+            }
+        },
+        "schema.NoData": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "string",
+                    "example": "status message"
+                },
+                "request": {
+                    "type": "string",
+                    "example": "/api/v1/endpoint"
+                },
+                "time": {
+                    "type": "string",
+                    "example": "2023-08-01T00:00:00Z"
+                },
+                "title": {
+                    "type": "string",
+                    "example": "success"
+                }
+            }
+        },
+        "schema.Portfolio": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string",
+                    "example": "2023-08-01T00:00:00Z"
+                },
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Portfolio"
+                },
+                "profit": {
+                    "type": "number",
+                    "example": 1000
+                },
+                "updated_at": {
+                    "type": "string",
+                    "example": "2023-08-01T00:00:00Z"
+                }
+            }
+        },
         "utils.Body": {
             "type": "object",
             "properties": {
-                "detail": {
-                    "type": "string"
-                },
+                "data": {},
                 "request": {
                     "type": "string"
                 },
